salt/files/iptables
# Generated by iptables-save v1.4.21 on Thu Feb 11 19:49:06 2016
*filter
:INPUT ACCEPT [16:1336]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [12:1432]
:LAB-8 - [0:0]
-A LAB-8 -p tcp -m tcp --dport 22 -j ACCEPT
-A LAB-8 -p tcp -m tcp --dport 4505 -j ACCEPT
-A LAB-8 -p tcp -m tcp --dport 4506 -j ACCEPT
-A LAB-8 -p tcp -m tcp --dport 53 -j ACCEPT
-A LAB-8 -p udp -m udp --dport 53 -j ACCEPT
-A LAB-8 -p tcp -m tcp --dport 80 -j ACCEPT
-A LAB-8 -p tcp -m tcp --dport 443 -j ACCEPT
-A LAB-8 -p udp -m udp --dport 137 -j ACCEPT
-A LAB-8 -p udp -m udp --dport 138 -j ACCEPT
-A LAB-8 -p tcp -m tcp --dport 139 -j ACCEPT
-A LAB-8 -p tcp -m tcp --dport 445 -j ACCEPT
-A LAB-8 -p udp -m udp --dport 445 -j ACCEPT
COMMIT
# Completed on Thu Feb 11 19:49:06 2016
